--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,17 @@ environment:
 
 dependencies:
   path: ^1.8.3
+  isar: ^3.1.0+1
+  xml: ^6.1.0
+  meta: ^1.8.0
+  archive: ^3.3.7
+  kana_kit: # TODO change to main one after merge
+    git:
+      url: https://github.com/Moseco/kana_kit
 
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
+
+  build_runner: any
+  isar_generator: any
