Added frequency information to vocab

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ pubspec.lock
 example/input_files/JMdict_e_examp
 example/input_files/kanjidic2.xml
 example/input_files/pitch_accents.txt
+example/input_files/frequency_list.txt
 
 # Temporary and output files
 example/temp_files/
