--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ environment:
   sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
-  path: ^1.8.3
-  isar: ^3.1.0+1
+  drift: ^2.18.0
+  path: ^1.9.0
   xml: ^6.4.2
   meta: ^1.10.0
   archive: ^3.4.9
@@ -17,8 +17,10 @@ dependencies:
       url: https://github.com/Moseco/kana_kit
 
 dev_dependencies:
-  lints: ^3.0.0
+  lints: ^4.0.0
   test: ^1.24.9
 
+  drift_dev: ^2.18.0
   build_runner: any
-  isar_generator: any
+
+  async: ^2.11.0
