--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
   sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
-  drift: ^2.18.0
+  drift: 2.18.0
   path: ^1.9.0
   xml: ^6.4.2
   meta: ^1.10.0
@@ -15,12 +15,14 @@ dependencies:
   kana_kit: # TODO change to main one after merge
     git:
       url: https://github.com/Moseco/kana_kit
+      ref: 'f79e782'
+  diacritic: ^0.1.5
 
 dev_dependencies:
   lints: ^4.0.0
   test: ^1.24.9
 
-  drift_dev: ^2.18.0
+  drift_dev: 2.18.0
   build_runner: any
 
   async: ^2.11.0
